fixed bg on small devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,6 +152,8 @@ body {
     .about-grid{
       display: inline-block;
       text-align: center;
+      background: none;
+      zoom: 0.97;
     }
 
     .custom-card1{
@@ -176,7 +178,7 @@ body {
     left: 50%;
     translate: -50% -50%;
     z-index: -1;
-    padding: 8rem;
+    padding: 7.3rem;
     border-radius: 3rem;
     animation: 4s spin linear infinite;
     }
